--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
     <meta name="Description" content="fran" />
     <title>fran</title>
   </head>
+  <link rel="stylesheet" type="text/css" href="./main.css" />
 
   <body>
     <p> hiiiiiiiiii</p>
