--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <link rel="stylesheet" type="text/css" href="./main.css" />
 
   <body>
-    <div id="page"></div>
+    <div id="root"></div>
   </body>
 
   <script src="./index.tsx"></script>
