--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
   <head>
     <meta name="Description" content="fran" />
     <title>fran</title>
-    <link rel="icon" type="image/x-icon" href="./assets/favicon.png" />
+    <link rel="icon" type="image/x-icon" href="./assets/yellow-favicon.png" />
   </head>
   <link rel="stylesheet" type="text/css" href="./main.css" />
 
